added expanding top bar

--- a/mycarpark/app/src/main/res/layout/activity_main.xml
+++ b/mycarpark/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,9 @@
         android:layout_height="match_parent"/>
         -->
 
+    <!-- search bar layout -->
+    <include layout="@layout/top_bar_layout" />
+
     <!--bottom sheet container-->
     <include layout="@layout/bottom_sheet_layout" />
 
