--- a/mycarpark/app/src/main/res/layout/top_bar_layout.xml
+++ b/mycarpark/app/src/main/res/layout/top_bar_layout.xml
@@ -31,6 +31,7 @@
                 android:padding="8dp">
 
                 <TextView
+                    android:id="@+id/textview_curr_car"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
@@ -63,18 +64,32 @@
 
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
-                   android:layout_height="match_parent">
+                   android:layout_height="match_parent"
+                   android:padding="8dp">
 
 
-                   <EditText
-                       android:id="@+id/editTextTextPersonName"
+                   <ImageButton
+                       android:id="@+id/button_add_car"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
-                       android:ems="10"
-                       android:inputType="textPersonName"
-                       android:text="Name"
+                       android:background="@color/transparent"
+                       app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
-                       app:layout_constraintTop_toTopOf="parent" />
+                       app:layout_constraintTop_toTopOf="parent"
+                       app:srcCompat="@drawable/ic_baseline_add_24" />
+
+                   <!--Use textInputLayout instead?-->
+                   <EditText
+                       android:id="@+id/editText_add_car"
+                       android:layout_width="0dp"
+                       android:layout_height="wrap_content"
+                       android:hint="add car"
+                       android:inputType="textPersonName"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintStart_toEndOf="@+id/button_add_car"
+                       app:layout_constraintTop_toTopOf="parent"
+                       android:imeOptions="actionDone"/>
+
                </androidx.constraintlayout.widget.ConstraintLayout>
 
                <androidx.recyclerview.widget.RecyclerView
