--- a/mycarpark/app/src/main/res/layout/curr_park_rv_item.xml
+++ b/mycarpark/app/src/main/res/layout/curr_park_rv_item.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/lin_layout_park_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
+    android:orientation="vertical"
     >
 
     <androidx.cardview.widget.CardView
@@ -56,6 +58,31 @@
                 app:layout_constraintTop_toBottomOf="@+id/textview_addr_line1" />
 
 
+            <Button
+                android:id="@+id/button_dismiss_park"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:layout_marginStart="16dp"
+                android:backgroundTint="?colorSecondary"
+                android:text="dismiss"
+                android:textColor="?colorOnSecondary"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_addr_line2"/>
+
+            <Button
+                android:id="@+id/placeholder_button2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:backgroundTint="?colorSecondary"
+                android:text="placeholder2"
+                android:textColor="?colorOnSecondary"
+                app:layout_constraintStart_toEndOf="@+id/button_dismiss_park"
+                app:layout_constraintTop_toBottomOf="@+id/textview_time" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 </LinearLayout>
+
