--- a/mycarpark/app/src/main/res/layout/curr_park_rv_item.xml
+++ b/mycarpark/app/src/main/res/layout/curr_park_rv_item.xml
@@ -32,6 +32,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
 
+                app:layout_constraintEnd_toStartOf="@+id/imageButton"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,6 +57,16 @@
                 android:layout_marginRight="8dp"
                 app:layout_constraintStart_toEndOf="@+id/textview_addr_line2"
                 app:layout_constraintTop_toBottomOf="@+id/textview_addr_line1" />
+
+            <ImageButton
+                android:id="@+id/button_more_park"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/transparent"
+                android:paddingTop="4dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_baseline_more_vert_18" />
 
 
             <Button
