--- a/mycarpark/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/mycarpark/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,14 +8,15 @@
     android:orientation="vertical"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     app:behavior_hideable="false"
-    app:behavior_peekHeight="85dp">
+    app:behavior_peekHeight="160dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         app:cardCornerRadius="16dp"
-        app:cardElevation="20dp">
+        app:cardElevation="20dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
