--- a/mycarpark/app/src/main/res/layout/curr_park_rv_item.xml
+++ b/mycarpark/app/src/main/res/layout/curr_park_rv_item.xml
@@ -79,16 +79,33 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textview_addr_line2" />
 
-            <ImageButton
-                android:id="@+id/button_alarm"
+            <ViewSwitcher
+                android:id="@+id/viewswitcher_alarm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:background="@color/transparent"
                 app:layout_constraintBottom_toBottomOf="@+id/button_dismiss_park"
                 app:layout_constraintStart_toEndOf="@+id/button_dismiss_park"
-                app:layout_constraintTop_toTopOf="@+id/button_dismiss_park"
-                app:srcCompat="@drawable/ic_baseline_add_alarm_24" />
+                app:layout_constraintTop_toTopOf="@+id/button_dismiss_park">
+
+                <ImageButton
+                    android:id="@+id/button_add_alarm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/transparent"
+                    android:layout_gravity="center"
+
+                    app:srcCompat="@drawable/ic_baseline_add_alarm_24" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip_alarm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:chipIcon="@drawable/ic_baseline_alarm_12"
+                    android:text="test"
+                    app:closeIconVisible="true" />
+
+            </ViewSwitcher>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
