--- a/mycarpark/app/src/main/res/layout/top_bar_layout.xml
+++ b/mycarpark/app/src/main/res/layout/top_bar_layout.xml
@@ -12,10 +12,7 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="3dp"
         app:cardElevation="3dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="16dp">
+       android:layout_margin="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
