removed isCurr boolean from Car in DB, uses single row table to preserve current car

--- a/mycarpark/app/src/main/res/layout/top_bar_layout.xml
+++ b/mycarpark/app/src/main/res/layout/top_bar_layout.xml
@@ -32,7 +32,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:text="testtttt"
+                    android:text="@string/top_bar_selector_default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/button_expand_arrow"
                     app:layout_constraintStart_toStartOf="parent"
