--- a/mycarpark/app/src/main/res/layout/activity_main.xml
+++ b/mycarpark/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,17 @@
     <include layout="@layout/bottom_sheet_layout" />
 
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fab_add_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
         android:layout_margin="18dp"
-        app:srcCompat="@android:drawable/ic_menu_mylocation"
+        android:clickable="true"
+        android:text="@string/fab_add_location_text"
+        android:lines="2"
+        android:minLines="2"
+        app:icon="@drawable/ic_baseline_add_24"
         app:layout_anchor="@id/bottom_sheet"
-        app:layout_anchorGravity="top|end"/>
+        app:layout_anchorGravity="top|end" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
