--- a/mycarpark/app/src/main/res/values/colors.xml
+++ b/mycarpark/app/src/main/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="text_gray">#757575</color>
+
+    <color name="blue_800">#186BE7</color>
+    <color name="blue_900">#134897</color>
+    <color name="blue_1000">#103D81</color>
+    <color name="blue_back">#3F4061</color>
 
 </resources>
