--- a/mycarpark/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/mycarpark/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -8,14 +8,15 @@
     android:orientation="vertical"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     app:behavior_hideable="false"
-    app:behavior_peekHeight="160dp">
+    app:behavior_peekHeight="32dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         app:cardCornerRadius="16dp"
-        app:cardElevation="20dp"
+        app:cardElevation="0dp"
+        style="@style/bottomsheet_style"
         >
 
         <LinearLayout
