--- a/mycarpark/app/src/main/res/menu/more_park_menu.xml
+++ b/mycarpark/app/src/main/res/menu/more_park_menu.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Remove"
+    <item android:title="@string/remove_park_menu_item"
         android:id="@+id/menu_item_park_remove"/>
+    <item android:title="@string/open_maps_park_menu_item"
+        android:id="@+id/menu_item_park_open_maps"/>
 </menu>
