--- a/mycarpark/app/src/main/res/layout/park_rv_item.xml
+++ b/mycarpark/app/src/main/res/layout/park_rv_item.xml
@@ -46,12 +46,10 @@
                 android:id="@+id/textview_time"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:padding="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginRight="8dp"
-                app:layout_constraintStart_toEndOf="@+id/textview_addr_line2"
-                app:layout_constraintTop_toBottomOf="@+id/textview_addr_line1" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_addr_line2" />
 
             <ImageButton
                 android:id="@+id/button_more_park"
